# simulator-joystick-to-flysky

./: AGENTS.md  LICENSE  README.md
.github/workflows/: arduino-build.yml  desktop-tests.yml  windows-exe.yml
assets/: README.md
desktop/: README.md  SimulatorJoystickToFlySky.spec  WINDOWS-EXE.md  build_windows.bat  requirements-build.txt  requirements.txt
desktop/app/: __init__.py  icon_resources.py  main.py
desktop/tests/: test_application_icon.py  test_auto_mapping_service.py  test_calibration.py  test_channel_device_source_editor.py  test_channel_mapping.py  test_cross_device_auto_mapping.py  test_dashboard_adapter_detection.py  test_device_page_modes.py  test_device_roles.py  test_firmware_installer_service.py  test_help_validation_support.py  test_live_transmitter_monitor.py  test_localization_and_responsive_ui.py  test_mapping_release_layout.py  test_multi_device_mapping.py  test_multi_device_mapping_page.py  test_product_theme.py  test_product_workspaces.py  test_profiles.py  test_protocol.py  test_qt_signals.py  test_readiness_service.py  test_safe_device_page.py  test_serial_simulator_failsafe.py  test_settings_product_polish.py  test_setup_wizard.py  test_theme_remote_joystick.py  test_unipolar_calibration.py
docs/: architecture.md  protocol.md  roadmap.md
examples/: README.md
firmware/esp32-s3/main/: CMakeLists.txt  Kconfig.projbuild  hid_report_parser.c  hid_report_parser.h  idf_component.yml  main.c  ppm_output.c  ppm_output.h  profile_store.c  profile_store.h  protocol.c  protocol.h  usb_joystick.c  usb_joystick.h
hardware/: README.md
(+67 files in other folders)
